more sections on landing page

--- a/public/contact.html
+++ b/public/contact.html
@@ -11,28 +11,28 @@
     href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Martel+Sans:wght@200;300;400;600;700;800;900&family=Mukta:wght@200;300;400;500;600;700;800&family=Quicksand:wght@300;400;500;600;700&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
-  <title>BKP Nepal | Life Changing Platform </title>
+  <title>BKP Nepal | Contact us </title>
 </head>
 
-<body class="bg-[#fff] font-fredoka antialiased text-gray-700">
-  <div class="fixed z-10 w-full bg-white px-6 shadow-lg">
+<body class="bg-[#fff] font-fredoka antialiased">
+  <div class="fixed w-full bg-white px-6 shadow">
     <header class="h-16 max-w-5xl mx-auto flex items-center justify-between flex-wrap">
       <a class="w-[140px]" href="/">
         <img src="images/bkp-nepal-logo.svg" alt="" srcset="">
       </a>
       <nav class="hidden lg:block">
-        <ul class="flex items-center text-sm uppercase space-x-0 text-gray-800">
-          <li><a class="nav-links"
+        <ul class="flex items-center text-sm uppercase space-x-2 text-gray-800">
+          <li><a class="transition duration-200 ease-in hover:bg-brand-800 hover:text-white py-6 px-3"
               href="#">Home</a></li>
-          <li><a class="nav-links"
+          <li><a class="transition duration-200 ease-in hover:bg-brand-800 hover:text-white py-6 px-3"
               href="#">Action Plan</a></li>
-          <li><a class="nav-links"
+          <li><a class="transition duration-200 ease-in hover:bg-brand-800 hover:text-white py-6 px-3"
               href="#">Membership Type</a></li>
-          <li><a class="nav-links"
+          <li><a class="transition duration-200 ease-in hover:bg-brand-800 hover:text-white py-6 px-3"
               href="#">Upcoming Projects</a></li>
-          <li><a class="nav-links"
+          <li><a class="transition duration-200 ease-in hover:bg-brand-800 hover:text-white py-6 px-3"
               href="#">About us</a></li>
-          <li><a class="nav-links"
+          <li><a class="transition duration-200 ease-in hover:bg-brand-800 hover:text-white py-6 px-3"
               href="contact.html">Contact us</a></li>
         </ul>
       </nav>
@@ -46,8 +46,8 @@
     </header>
     <!-- mobile off canvas side nav -->
     <div
-      class="mobile-side-nav fixed z-20 w-full h-screen top-0 left-0 bg-white transition-transform delay-100 -translate-x-full">
-      <div class="h-12 p-6 flex justify-between items-center">
+      class="mobile-side-nav fixed z-10 w-full h-screen top-0 left-0 bg-white transition-transform delay-100 -translate-x-full">
+      <div class="h-[80px] p-6 flex justify-between items-center">
         <svg width="140" height="30" viewBox="0 0 197 30" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M105.12 0.845541C105.325 0.834492 105.53 0.866875 105.722 0.940577C105.914 1.01428 106.089 1.12764 106.234 1.27326C106.373 1.41869 106.481 1.59037 106.553 1.77825C106.625 1.96612 106.658 2.16643 106.651 2.36742V27.9709C106.663 28.1977 106.627 28.4244 106.546 28.6367C106.465 28.849 106.342 29.0425 106.183 29.2049C106.025 29.3673 105.834 29.4953 105.624 29.5808C105.413 29.6662 105.188 29.7074 104.96 29.7016C104.705 29.7035 104.452 29.6562 104.214 29.5624C103.991 29.4811 103.793 29.3441 103.638 29.1645L85.9917 5.83891L86.8173 5.34156V28.2195C86.8243 28.4214 86.79 28.6227 86.7164 28.8108C86.6429 28.999 86.5316 29.1701 86.3895 29.3137C86.2396 29.4584 86.0616 29.5709 85.8667 29.6445C85.6717 29.718 85.4638 29.751 85.2556 29.7414C85.0566 29.7493 84.8581 29.7153 84.673 29.6417C84.488 29.568 84.3205 29.4562 84.1813 29.3137C84.0442 29.1675 83.9375 28.9954 83.8675 28.8076C83.7975 28.6197 83.7655 28.4199 83.7735 28.2195V2.49673C83.7575 2.27105 83.7911 2.0446 83.8718 1.83325C83.9526 1.62191 84.0786 1.43078 84.241 1.27326C84.5442 0.97768 84.9515 0.813312 85.375 0.815699C85.6373 0.818042 85.8969 0.868619 86.1409 0.964904C86.3772 1.0463 86.5847 1.19496 86.7377 1.39262L104.135 24.3999L103.598 25.0564V2.37737C103.591 2.17547 103.625 1.97426 103.699 1.7861C103.772 1.59794 103.883 1.42681 104.025 1.28321C104.169 1.14072 104.34 1.02856 104.528 0.953382C104.716 0.878202 104.917 0.841529 105.12 0.845541Z"
@@ -187,123 +187,61 @@
     <!-- end mobile off canvas side nav -->
   </div>
 
-  <!-- hero section -->
-  <section
-    class="bg-brand-50 w-full bg-fixed bg-no-repeat bg-cover bg-right-bottom md:bg-center bg-[url('https://img.freepik.com/free-photo/bank-with-coins-green-sprout_169016-3685.jpg?t=st=1647629458~exp=1647630058~hmac=28fd22e915d65538d5ea5996c4319c4213ebcb82575f561789b563a1528ad6e2&w=826')]">
-    <div
-      class="w-full min-h-[100vh] bg-black bg-opacity-80 flex flex-col justify-center items-center ">
-      <h1 class="py-2 text-transparent bg-clip-text bg-gradient-to-br from-white via-gray-50 to-brand-700 text-center text-4xl md:text-6xl font-mukta font-black md:max-w-xl">जीवन बदल्ने साझा
-        मंचमा हजुरलाई स्वागत छ।</h1>
-      <div>
-        <button
-          class="text-white text-md md:text-2xl transition-all duration-300 ease-in-out bg-gradient-to-tr from-brand-800 to-brand-dark hover:from-brand-dark hover:to-brand-800 transform hover:scale-105 mt-4 md:mt-8 px-5 py-3 rounded-md shadow shadow-brand-500/20 focus:ring-2 focus:ring-white focus:-ring-offset-4">Become
-          a member</button>
-      </div>
-    </div>
-  </section>
-  <!-- end of hero section -->
 
-  <!-- start of why choose bkp nepal -->
-  <section class="bg-black-50">
-    <div class="max-w-5xl mx-auto px-8 py-16 md:py-24">
-      <h3 class="text-4xl font-semibold py-2">Why Choose BKPNepal?</h3>
-      <div class="grid md:grid-cols-4 gap-4 mt-4">
-        <div class="bg-white shadow p-4 py-8 border-l-8 border-l-brand-700 rounded-md">
-          <span class="text-sm">For</span>
-          <p class="text-2xl">Investment</p>
+  <section class="pt-32 pb-16  bg-gray-100">
+    <main class="max-w-3xl mx-auto grid sm:grid-cols-3 gap-8 p-8 min-h-96 bg-white rounded-md shadow">
+        <div class="bg-red-50 p-4 sm:p-0 rounded-md sm:bg-white flex flex-col items-start justify-center">
+          <h2 class="pb-12 text-3xl">We love to hear from you</h2>
+          <h3 class="text-xl underline decoration-gray-500 underline-offset-2">We are at</h3>
+          <p class="my-2">Butwal-11 Buddhanagar, Rupendahi , Nepal</p>
+          <p>Call us <a class="text-gray-800 font-semibold" href="tel:+9779857039526">9857039526</a></p>
+          <a class="hover:text-blue-700 hover:underline" href="mailto: administration@bkpnepal.com">administration@bkpnepal.com</a>
+          <div class="flex flex-col">
+            <h3 class="text-xl my-4 underline decoration-gray-500 underline-offset-2">Reach us via</h3>
+            <div class="flex flex-row gap-4">
+              <!-- faccebook icon -->
+              <a class="float-left" href="#" target="_blank">
+                <svg class="w-6 fill-gray-700 hover:fill-gray-600" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M48 24C48 10.7452 37.2548 0 24 0C10.7452 0 0 10.7452 0 24C0 35.9789 8.77641 45.908 20.25 47.7084V30.9375H14.1562V24H20.25V18.7125C20.25 12.6975 23.8331 9.375 29.3152 9.375C31.9402 9.375 34.6875 9.84375 34.6875 9.84375V15.75H31.6613C28.68 15.75 27.75 17.6002 27.75 19.5V24H34.4062L33.3422 30.9375H27.75V47.7084C39.2236 45.908 48 35.9789 48 24Z" />
+                </svg>
+              </a>
+              <!--twitter icon -->
+              <a href="#" target="_blank">
+                <svg class="w-6 fill-gray-700 hover:fill-gray-600" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M15.1003 43.5C33.2091 43.5 43.1166 28.4935 43.1166 15.4838C43.1166 15.0619 43.1072 14.6307 43.0884 14.2088C45.0158 12.815 46.679 11.0886 48 9.11066C46.205 9.90926 44.2993 10.4308 42.3478 10.6575C44.4026 9.42588 45.9411 7.491 46.6781 5.21159C44.7451 6.35718 42.6312 7.16528 40.4269 7.60128C38.9417 6.02318 36.978 4.97829 34.8394 4.62816C32.7008 4.27803 30.5064 4.64216 28.5955 5.66425C26.6846 6.68635 25.1636 8.30947 24.2677 10.2827C23.3718 12.2559 23.1509 14.4693 23.6391 16.5807C19.725 16.3842 15.8959 15.3675 12.4 13.5963C8.90405 11.825 5.81939 9.33893 3.34594 6.29909C2.0888 8.46655 1.70411 11.0314 2.27006 13.4722C2.83601 15.9131 4.31013 18.047 6.39281 19.44C4.82926 19.3904 3.29995 18.9694 1.93125 18.2119V18.3338C1.92985 20.6084 2.7162 22.8132 4.15662 24.5736C5.59704 26.334 7.60265 27.5412 9.8325 27.99C8.38411 28.3863 6.86396 28.4441 5.38969 28.1588C6.01891 30.1149 7.24315 31.8258 8.89154 33.0527C10.5399 34.2796 12.5302 34.9613 14.5847 35.0025C11.0968 37.7423 6.78835 39.2283 2.35313 39.2213C1.56657 39.2201 0.780798 39.1719 0 39.0769C4.50571 41.9676 9.74706 43.5028 15.1003 43.5Z" />
+                </svg>
+              </a>
+              <!-- linked icon -->
+              <a href="#" target="_blank">
+                <svg class="w-6 fill-gray-700 hover:fill-gray-600" viewBox="0 0 48 48" fill="white" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M44.4469 0H3.54375C1.58437 0 0 1.54688 0 3.45938V44.5312C0 46.4437 1.58437 48 3.54375 48H44.4469C46.4062 48 48 46.4438 48 44.5406V3.45938C48 1.54688 46.4062 0 44.4469 0ZM14.2406 40.9031H7.11563V17.9906H14.2406V40.9031ZM10.6781 14.8688C8.39062 14.8688 6.54375 13.0219 6.54375 10.7437C6.54375 8.46562 8.39062 6.61875 10.6781 6.61875C12.9563 6.61875 14.8031 8.46562 14.8031 10.7437C14.8031 13.0125 12.9563 14.8688 10.6781 14.8688ZM40.9031 40.9031H33.7875V29.7656C33.7875 27.1125 33.7406 23.6906 30.0844 23.6906C26.3812 23.6906 25.8187 26.5875 25.8187 29.5781V40.9031H18.7125V17.9906H25.5375V21.1219H25.6312C26.5781 19.3219 28.9031 17.4188 32.3625 17.4188C39.5719 17.4188 40.9031 22.1625 40.9031 28.3313V40.9031Z" />
+                </svg>
+              </a>
+            </div>
+          </div>
         </div>
-        <div class="bg-white shadow p-4 py-8 border-l-8 border-l-brand-700 rounded-md">
-          <span class="text-sm">For</span>
-          <p class="text-2xl">Business with company</p>
+        <div class="row-start-1 sm:ml-16 sm:row-auto sm:col-span-2">
+          <h3 class="text-2xl underline decoration-gray-500 underline-offset-2 mb-4">Message us</h3>
+          <form action="">
+            <label class="mb-4 block" for="fullname">
+              <input class="input" type="text" name="fullname" id="fullname" placeholder="Full Name" required/>
+            </label>
+            <label class="mb-4 block" for="phone">
+              <input class="input" type="text" name="phone" id="phone" placeholder="Mobile/Phone" required />
+            </label>
+            <label class="mb-4 block" for="email">
+              <input class="input" type="email" name="email" id="email" placeholder="Email" required/>
+            </label>
+            <textarea class="input" name="message" id="message" cols="10" rows="5" required></textarea>
+            <button class="btn mt-4 float-right">Send Message</button>
+          </form>
         </div>
-        <div class="bg-white shadow p-4 py-8 border-l-8 border-l-brand-700 rounded-md">
-          <span class="text-sm">For</span>
-          <p class="text-2xl">Employment</p>
-        </div>
-        <div class="bg-white shadow p-4 py-8 border-l-8 border-l-brand-700 rounded-md">
-          <span class="text-sm">For</span>
-          <p class="text-2xl">Becoming Agent</p>
-        </div>
-      </div>
-    </div>
+      </main>
   </section>
-  <!-- end of why choose bkp nepal section -->
 
-  <!-- about us section -->
-  <section class="bg-white">
-    <div class="section">
-      <h3 class="font-mukta text-3xl font-extrabold underline underline-offset-2 decoration-brand-800">हाम्रो बारेमा</h3>
-      <p class="my-6 max-w-xl text-sm leading-relaxed font-semibold text-black-600">विविध बस्तु तथा क्षेत्र हरुमा राष्ट्रिय तथा अन्तर्राष्ट्रिय स्तरमा ब्यापार, ब्यापार प्रबर्द्धन, र ब्यवस्थापन गर्ने प्रमुख उदेश्यका साथ मिति २०७३कार्तिक २६ गते कम्पनी रजिस्ट्रार कार्यलयमा दर्ता भई संचालनमा आएको कम्पनी हो बिश्वकर्मा टेडिङ्ग एण्ड प्रमोटर्स प्रा.लि. । यस कम्पनीको एक मात्र संचालक इ.सन्जुक्ता सुनार हुनुहुन्छ । कम्पनीको मुख्य कार्यलय हाल बुटवल -११ रुपन्देही मा रहेको छ। . . .</p>
-      <a href="about.html" class="btn bg-brand-50 text-brand-dark hover:bg-brand-200 shadow-none rounded-full font-bold">पुरा पढ्नुस</a>
-    </div>
 
-  </section>
-<!-- end of about us section -->
-
-<!-- hamro mantra section -->
-  <section class="bg-white border-t border-t-black-50">
-    <div class="section">
-      <h3 class="font-mukta text-center sm:text-left text-3xl font-extrabold underline underline-offset-2 decoration-brand-800">हाम्रो मन्त्र</h3>
-      <div class="grid md:grid-cols-3 gap-8 mt-8 text-xl font-semibold">
-        <div class="bg-black-50 p-4 rounded-lg shadow-sm">
-          <img class="p-8" src="https://cdn-icons.flaticon.com/png/512/756/premium/756740.png?token=exp=1648019459~hmac=53ffa2a8f85db2f951c43d78e9fbb7e1" alt="teamwork">
-          <p class="text-2xl text-brand-800 text-center py-2">Team Work</p>
-        </div>
-        <div class="bg-black-50 p-4 rounded-lg shadow-sm">
-          <img class="p-8" src="https://cdn-icons-png.flaticon.com/512/780/780528.png" alt="technology icon">
-          <p class="text-2xl text-brand-800 text-center py-2">Technology</p>
-        </div>
-      
-        <div class="bg-black-50 p-4 rounded-lg shadow-sm">
-          <img class="p-8" src="https://cdn-icons.flaticon.com/png/512/3707/premium/3707965.png?token=exp=1648019670~hmac=7e3fdeb72207b151cd082a840ba6d1ed" alt="compounding">
-          <p class="text-2xl text-brand-800 text-center py-2">Compounding</p>
-        </div>
-      </div>
-    </div>
-  </section>
-<!-- end of hamro mantra -->
-  <!-- mission vision goal section -->
-  <section class="bg-black-50">
-    <div
-      class="max-w-5xl mx-auto grid gap-8 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 px-8 py-16 md:py-24  bg-black-50">
-      <div class="card bg-white rounded-xl hover:shadow-lg">
-        <div class="flex items-center justify-center">
-          <img class="w-7/12 pt-3" src="https://cdn-icons-png.flaticon.com/512/1534/1534938.png" alt="" />
-        </div>
-        <div class="px-4 py-4 space-y-2">
-          <h3 class="underline decoration-brand decoration-4 text-black text-2xl font-bold">Vision</h3>
-          <p class="font-mukta text-black-800 text-lg font-semibold">सानो सानो पुंजीलाई एकीकृत गरि बृहत राष्ट्रिय
-            पुंजिमा रुपान्तरण गरि उत्पादन ब्यापार प्रबर्द्धन देशलाई आर्थिक समृद्धि मा लैजाने।</p>
-        </div>
-      </div>
-      <div class="card bg-white rounded-xl hover:shadow-lg">
-        <div class="flex items-center justify-center">
-          <img class="w-7/12 pt-3" src="https://cdn-icons-png.flaticon.com/512/3891/3891710.png" alt="" />
-        </div>
-        <div class="px-4 py-4 space-y-2">
-          <h3 class="underline decoration-brand decoration-4 text-black text-2xl font-bold">Mission</h3>
-          <p class="font-mukta text-black-800 text-lg font-semibold">राष्ट्रिय तथा अन्तर्राष्ट्रिय जगतमा एक प्रतिष्ठित
-            कम्पनी भइ कारोबार गर्ने।</p>
-        </div>
-      </div>
-    
-      <div class="card bg-white rounded-xl hover:shadow-lg">
-        <div class="flex items-center justify-center">
-          <img class="w-7/12 pb-2" src="https://cdn-icons-png.flaticon.com/512/1534/1534968.png" alt="" />
-          <!-- <img class="w-7/12" src="https://cdn-icons-png.flaticon.com/512/1239/1239719.png" alt="" /> -->
-        </div>
-        <div class=" px-4 py-4 space-y-2">
-          <h3 class="underline decoration-brand decoration-4 text-black text-2xl font-bold">Goal</h3>
-          <p class="font-mukta text-black-800 text-lg font-semibold">सम्पुर्ण नेपाली जन हरु को साझा कम्पनी बनाई
-            राष्ट्रिय तथा अन्तर्राष्ट्रिय जगत मा ब्यापार ब्यवसाय गर्ने</p>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- end of main -->
-
-  <!-- footer section start -->
-  <section class="pt-4 h-auto bg-black">
+   <!-- footer section start -->
+<section class="pt-4 h-auto bg-black">
     <footer class="max-w-5xl mx-auto  px-6 py-8 text-black-100 md:flex flex-wrap gap-4 flex-row justify-between items-start">
       <div>
         <svg class="w-[140px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 39.6">
@@ -392,7 +330,7 @@
               Projects</a></li>
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="#">About
               us</a></li>
-          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="contact.html">Contact
+          <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="#">Contact
               us</a></li>
           <li><a class="transition duration-100 ease-in hover:text-brand-300 py-2 hover:underline " href="login.html">Login</a></li>
         </ul>
@@ -443,7 +381,7 @@
 
     </footer>
     <!-- copyright section -->
-    <div class="w-full px-6 bg-black-dark text-black-100 md:text-center py-6">
+    <div class="w-full px-6 bg-[#222222] text-black-100 md:text-center py-6">
       <p class="mb-2">&copy Copyright <span>Bishwokarma Trading and Promotors Pvt. ltd.</span> ,
         All Rights Reserved.</p>
       <span>
@@ -462,15 +400,7 @@
   </section>
   <!-- footer section end -->
 
-  <script>
-    const menu = document.querySelector('.menu')
-    const mobileSideNav = document.querySelector('.mobile-side-nav')
-    const closeNav = document.querySelector('.close-side-nav')
-
-    menu.addEventListener('click', () => mobileSideNav.classList.toggle('-translate-x-full'))
-    closeNav.addEventListener('click', () => mobileSideNav.classList.toggle('-translate-x-full'))
-  </script>
-
+  <script src="js/main.js"></script>
 </body>
 
 </html>
